--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.32.0
-pandas==2.1.4
-numpy==1.24.4
-plotly==5.19.0
-mysql-connector-python==8.2.0
-Pillow==10.2.0
+streamlit>=1.37.0
+pandas>=2.2.0
+numpy>=1.26.4
+plotly>=5.19.0
+Pillow>=10.2.0
+mysql-connector-python>=8.0.0
