--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
+# Core
 streamlit>=1.37.0
+
+# Data manipulation
 pandas>=2.2.0
 numpy>=1.26.4
-plotly>=5.19.0
-Pillow>=10.2.0
+
+# Visualization
 matplotlib>=3.8.0
 seaborn>=0.13.2
+plotly>=5.19.0
+Pillow>=10.2.0
+
+# Machine Learning
+scikit-learn>=1.3.0
+
+# Database
 mysql-connector-python>=8.0.0
+
+# Optional utilities
+joblib>=1.3.2
+
 
 
 
